# Cloud---Project

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
files/: models.py  serializers.py  urls.py  urls_html.py  views.py  views_html.py
files/migrations/: 0001_initial.py  0002_initial.py
templates/: base.html
templates/files/: base.html  list.html  upload.html
templates/users/: login.html  logout.html  register.html
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
